--- a/Resources/Public/Styles/Common.css
+++ b/Resources/Public/Styles/Common.css
@@ -52,7 +52,7 @@ div.neos-contentcollection table th
 /* end table styling */
 
 .typo3-neos-nodetypes-twocolumn > div, .typo3-neos-nodetypes-threecolumn > div, .typo3-neos-nodetypes-fourcolumn > div { margin: 0; float: left; }
-.typo3-neos-nodetypes-twocolumn, .typo3-neos-nodetypes-threecolumn, .typo3-neos-nodetypes-fourcolumn { clear: both; }
+.typo3-neos-nodetypes-twocolumn:after, .typo3-neos-nodetypes-threecolumn:after, .typo3-neos-nodetypes-fourcolumn:after { content: ""; clear: both; display:table; }
 .columns-50-50 > div.column { width: 50%; }
 .columns-25-75 > div.column:nth-child(1) { width: 25%; }
 .columns-25-75 > div.column:nth-child(2) { width: 75%; }
