fix missing value

--- a/Resources/Private/Templates/NodeTypes/MultipleImages.html
+++ b/Resources/Private/Templates/NodeTypes/MultipleImages.html
@@ -2,7 +2,7 @@
 	<f:then>
 		<div{attributes -> f:format.raw()}>
 			<f:for each="{assets}" as="asset">
-				<f:render partial="Image" arguments="{image: asset, enableFancybox: 'true', fancyboxGroup: fancyboxGroup, title: asset.caption, alternativeText: asset.title, maximumWidth: maxWidth, maximumHeight: maxHeight}" />
+				<f:render partial="Image" arguments="{image: asset, enableFancybox: 'true', fancyboxGroup: fancyboxGroup, title: asset.caption, alternativeText: asset.title, maximumWidth: maxWidth, maximumHeight: maxHeight, hasCaption: false}" />
 			</f:for>
 			<div class="clearfix"></div>
 		</div>
@@ -17,4 +17,4 @@
 		</f:security.ifAccess>
 	</f:else>
 </f:if>
-<f:comment><f:render partial="Image" arguments="{image: asset, enableFancybox: 'true', fancyboxGroup: fancyboxGroup, title: asset.resource.filename, width: maxWidth, height: maxHeight}" /></f:comment>
+<f:comment><f:render partial="Image" arguments="{image: asset, enableFancybox: 'true', fancyboxGroup: fancyboxGroup, title: asset.resource.filename, width: maxWidth, height: maxHeight, hasCaption: false}" /></f:comment>
