--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -1,4 +1,4 @@
-{namespace neos=TYPO3\Neos\ViewHelpers}
+﻿{namespace neos=TYPO3\Neos\ViewHelpers}
 {namespace media=TYPO3\Media\ViewHelpers}
 <!DOCTYPE html>
 <html>
@@ -45,12 +45,19 @@
                 <div id="PageHeadingContent">
                     <div id="PageArticleDate">
                         <f:if condition="{isChronikItem}">
-				<f:then>{date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE', localeFormatLength: 'long')}</f:then>
-				<f:else>{neos:contentElement.editable(property: 'subheader')}</f:else>
-			</f:if>
+				            <f:then>
+                                {date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE', localeFormatLength: 'long')}
+                                <neos:contentElement.wrap node="{node}"><span>{neos:contentElement.editable(property: 'dateAdditionalText', tag: 'span')}</span></neos:contentElement.wrap>
+                            </f:then>
+				            <f:else>
+                                <neos:contentElement.wrap node="{node}">
+                                    <header class="underline">{neos:contentElement.editable(property: 'subheadline')}</header>
+                                </neos:contentElement.wrap>
+                            </f:else>
+			            </f:if>
                     </div> 
                     <div id="PageArticleHeading">
-                        <header>{neos:contentElement.editable(property: 'header')}</header>
+                        <header>{header}</header>
                     </div>
                 </div>
                 <f:if condition="{headerImage}">
@@ -76,9 +83,20 @@
             </div>            
             <div id="PageBody">
                 <article>
-                    <f:if condition="{isChronikItem}"> <f:if condition="{subheader} != ''">
-                        <header class="underline">{neos:contentElement.editable(property: 'subheader')}</header>
-                    </f:if> </f:if>
+                    <f:if condition="{isChronikItem}">
+                        <f:if condition="{neos:rendering.inBackend()}">
+                            <f:then>
+                                <neos:contentElement.wrap node="{node}">
+                                    <header class="underline">{neos:contentElement.editable(property: 'subheadline')}</header>
+                                </neos:contentElement.wrap>
+                            </f:then>
+                            <f:else>
+                                <f:if condition="{subheadline} != ''">
+                                    <header class="underline">{subheadline -> f:format.stripTags()}</header>
+                                </f:if>
+                            </f:else>
+                        </f:if>
+                    </f:if>
                     
                     {content.main -> f:format.raw()}
                     
