display subheading in StandaloneFuba

--- a/Resources/Private/Templates/NodeTypes/FrontpageFubaResults.html
+++ b/Resources/Private/Templates/NodeTypes/FrontpageFubaResults.html
@@ -3,6 +3,7 @@
 <article class="FrontpageNewsItem">
     <header>{headline}</header>
     <div class="NewsItemDate">{date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE', localeFormatLength: 'long')}</div>
+    <div class="NewsItemSubheading">{subheadline}</div>
     <div class="NewsItemBody NewsItemFubaResult">
         <table>
             <tr>
