--- a/Resources/Private/Templates/NodeTypes/FrontpageInfoBox.html
+++ b/Resources/Private/Templates/NodeTypes/FrontpageInfoBox.html
@@ -1,6 +1,6 @@
 {namespace neos=TYPO3\Neos\ViewHelpers}
 {namespace ts=TYPO3\TypoScript\ViewHelpers}
 <div class="RightColumnInfoBox">
-	<div class="InfoBoxHeading <f:if condition="{isImportant}"> InfoBoxImportant </f:if>">{neos:contentElement.editable(property: 'title')}</div>
+	<div class="InfoBoxHeading" {f:if(condition: '{bgColor}', then: 'style="background-color: {bgColor}"')}>{neos:contentElement.editable(property: 'title')}</div>
 	<div class="InfoBoxBody"><ts:render path="contentRenderer" context="{node: content}" /><div class="clearfix"></div></div>
 </div>
