--- a/Resources/Private/Templates/NodeTypes/RelatedPagesBacklink.html
+++ b/Resources/Private/Templates/NodeTypes/RelatedPagesBacklink.html
@@ -6,7 +6,24 @@
         <span class="ArticlePressespiegelItemDate">{date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE', localeFormatLength: 'long')}</span>
     </div>
     <div class="ArticlePressespiegelItemLink">
-    <f:if condition="{chronikLink}">
+    
+    <f:if condition="{link}">
+        <f:then>
+            <f:if condition="{linkType} == 'node'">
+                <neos:link.node node="{link}">{subheading}</neos:link.node>
+            </f:if>
+            <f:if condition="{linkType} == 'uri'">
+                <f:link.external uri="{link}">{subheading -> f:format.nl2br()}</f:link.external>
+            </f:if>
+        </f:then>
+        <f:else>
+            {subheading -> f:format.nl2br()}
+        </f:else>
+    </f:if>
+
+
+
+    <!--f:if condition="{chronikLink}">
         <f:then> <neos:link.node node="{itemLink}">{subheading}</neos:link.node> </f:then>
         <f:else>
             <f:if condition="{link}">
@@ -14,6 +31,6 @@
                 <f:else>{neos:contentElement.editable(property: 'subheadline')}</f:else>
             </f:if>
         </f:else>
-    </f:if>
+    </!--f:if-->
     </div>
 </div>
