change TTResults to display HTML Content

--- a/Resources/Private/Templates/NodeTypes/FrontpageTTResults.html
+++ b/Resources/Private/Templates/NodeTypes/FrontpageTTResults.html
@@ -4,10 +4,8 @@
     <header>{headline}</header>
     <div class="NewsItemDate">{date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE', localeFormatLength: 'long')}</div>
     <div class="NewsItemBody NewsItemTTResult">
-        <f:if condition="{isStandalone}">
-            <f:then> {neos:contentElement.editable(property: 'text')} </f:then>
-            <f:else> {text -> f:format.raw()} </f:else>
-        </f:if>
+        {source -> f:format.raw()}
         <div class="clearfix"></div>
     </div>
+    <a href="//www.vfl-duttweiler.de/vfl-tt.htm">mehr zu VfL Tischtennis</a>
 </article>
