--- a/Resources/Public/Styles/Frontpage.css
+++ b/Resources/Public/Styles/Frontpage.css
@@ -51,8 +51,8 @@ article.FrontpageNewsItem header { color: #363; font-weight: bold; font-size: 11
 .NewsItemTTResult table { border: 3px solid #363 !important; }
 .NewsItemTTResult table tr { background-color: #363 !important; color: white; }
 .NewsItemTTResult table td { border: none !important; padding: 2px 10px !important; }
-.NewsItemTTResult table tr:last-child { border-top: 1px solid white !important; text-align: center; font-weight: bold; font-size: 8pt; }
-.NewsItemTTResult table tr:last-child td a { color: white; }
+/*.NewsItemTTResult table tr:last-child { border-top: 1px solid white !important; text-align: center; font-weight: bold; font-size: 8pt; }
+.NewsItemTTResult table tr:last-child td a { color: white; }*/
 .NewsItemTTResult .aloha-table-wrapper table { color: black; }
 
 .NewsItemFubaResult table, .NewsItemFubaResult table tr, .NewsItemFubaResult table tr td { border: none !important; padding: 0; }
