--- a/Resources/Private/Templates/Page/Weinbau.html
+++ b/Resources/Private/Templates/Page/Weinbau.html
@@ -33,9 +33,8 @@
                         <li><neos:link.node node="~/node-551d17d1c1f91">Duttweiler Wein</neos:link.node></li>
                     </ul>
                 </nav> 
-                <div id="PageTitle">
-                    {title}
-                </div>
+                <div id="PageSubtitle">{subtitle}</div>
+                <div id="PageTitle">{title}</div>
                 <nav id="PageMenu">
                     <ul>
                         <li><a href="javascript:history.back();">&laquo;</a></li>
