--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -1,5 +1,5 @@
 ﻿{namespace neos=TYPO3\Neos\ViewHelpers}
-{namespace media=TYPO3\Media\ViewHelpers}
+{namespace media=Neos\Media\ViewHelpers}
 <!DOCTYPE html>
 <html>
     <head>
