TASK: Apply migration Neos.Neos-20161125002322
Adjusts code to package renaming from "TYPO3.Neos" to "Neos.Neos"

--- a/Resources/Private/Templates/API/RssItem.html
+++ b/Resources/Private/Templates/API/RssItem.html
@@ -1,4 +1,4 @@
-{namespace neos=TYPO3\Neos\ViewHelpers}
+{namespace neos=Neos\Neos\ViewHelpers}
 <item>
   <title>{headline}</title>
   <description>{subheadline}</description>
