--- a/Resources/Private/Templates/NodeTypes/MultipleImages.html
+++ b/Resources/Private/Templates/NodeTypes/MultipleImages.html
@@ -8,7 +8,7 @@
 		</div>
 	</f:then>
 	<f:else>
-		<f:security.ifAccess privilegeTarget="TYPO3.Neos:Backend.GeneralAccess">
+		<f:security.ifAccess privilegeTarget="Neos.Neos:Backend.GeneralAccess">
 			<f:if condition="{node.context.workspace.name} != 'live'">
 				<ul{attributes -> f:format.raw()}>
 					<li>Empty asset list</li>
