--- a/Resources/Private/Templates/Module/DuttweilerApp/NotificationReview/Index.html
+++ b/Resources/Private/Templates/Module/DuttweilerApp/NotificationReview/Index.html
@@ -1,4 +1,4 @@
-﻿{namespace neos=TYPO3\Neos\ViewHelpers}
+﻿{namespace neos=Neos\Neos\ViewHelpers}
 <f:layout name="BackendModule" />
 
 <f:section name="subtitle">
@@ -47,7 +47,7 @@
                     <div class="neos-header">Wirklich alle Benachrichtigungen verwerfen?</div>
                 </div>
                 <div class="neos-modal-footer">
-                    <a href="#" class="neos-button" data-dismiss="modal">{neos:backend.translate(id: 'cancel', source: 'Modules', package: 'TYPO3.Neos')}</a>
+                    <a href="#" class="neos-button" data-dismiss="modal">{neos:backend.translate(id: 'cancel', source: 'Modules', package: 'Neos.Neos')}</a>
                     <button form="postHelper" formaction="{f:uri.action(action: 'discardAll')}" type="submit"class="neos-button neos-button-danger" title="Alle verwerfen"><i class="icon-trash icon-white"></i> Alle verwerfen</button>
                 </div>
             </div>
