--- a/Resources/Private/Templates/NodeTypes/FrontpageInfoBox.html
+++ b/Resources/Private/Templates/NodeTypes/FrontpageInfoBox.html
@@ -1,4 +1,4 @@
-{namespace neos=TYPO3\Neos\ViewHelpers}
+{namespace neos=Neos\Neos\ViewHelpers}
 {namespace ts=TYPO3\TypoScript\ViewHelpers}
 <div class="RightColumnInfoBox">
 	<div class="InfoBoxHeading" {f:if(condition: '{bgColor}', then: 'style="background-color: {bgColor}"')}>{neos:contentElement.editable(property: 'title')}</div>
