--- a/Resources/Private/Templates/NodeTypes/FrontpageTTNews.html
+++ b/Resources/Private/Templates/NodeTypes/FrontpageTTNews.html
@@ -1,4 +1,4 @@
-﻿{namespace neos=TYPO3\Neos\ViewHelpers}
+﻿{namespace neos=Neos\Neos\ViewHelpers}
 {namespace media=Neos\Media\ViewHelpers}
 <article class="FrontpageNewsItem">
     <header>{title}</header>
