--- a/Resources/Private/Templates/NodeTypes/Headline.html
+++ b/Resources/Private/Templates/NodeTypes/Headline.html
@@ -1,4 +1,4 @@
-{namespace neos=TYPO3\Neos\ViewHelpers}
+{namespace neos=Neos\Neos\ViewHelpers}
 <header {attributes -> f:format.raw()}>
 	{neos:contentElement.editable(property: 'title')}
 </header>
