--- a/Resources/Private/Templates/NodeTypes/RelatedPagesBacklink.html
+++ b/Resources/Private/Templates/NodeTypes/RelatedPagesBacklink.html
@@ -1,4 +1,4 @@
-{namespace neos=TYPO3\Neos\ViewHelpers}
+{namespace neos=Neos\Neos\ViewHelpers}
 <div class="ArticlePressespiegelItem">
     <div class="ArticlePressespiegelItemIcon"></div>
     <div class="ArticlePressespiegelItemInner">
