--- a/Resources/Private/Templates/Page/Error.html
+++ b/Resources/Private/Templates/Page/Error.html
@@ -1,4 +1,4 @@
-﻿{namespace neos=TYPO3\Neos\ViewHelpers}
+﻿{namespace neos=Neos\Neos\ViewHelpers}
 <f:layout name="Default" />
 
 <f:section name="head">
@@ -54,8 +54,8 @@
 	<p class="technical-details">#{exception.code}: {exception.message}</p>
 	</f:if>
 	<f:if condition="{showSetupLink}">
-		<p><strong>{neos:backend.translate(id: 'error.exception.{renderingOptions.renderingGroup}.setupMessage', package: 'TYPO3.Neos')}</strong></p>
-		<p><a href="/setup" class="neos-button neos-button-primary">{neos:backend.translate(id: 'error.exception.goToSetup', package: 'TYPO3.Neos')}</a></p>
+		<p><strong>{neos:backend.translate(id: 'error.exception.{renderingOptions.renderingGroup}.setupMessage', package: 'Neos.Neos')}</strong></p>
+		<p><a href="/setup" class="neos-button neos-button-primary">{neos:backend.translate(id: 'error.exception.goToSetup', package: 'Neos.Neos')}</a></p>
 	</f:if>
 	</div>
 
