--- a/Resources/Private/Templates/API/GenericList.html
+++ b/Resources/Private/Templates/API/GenericList.html
@@ -1,4 +1,4 @@
-{namespace ts=TYPO3\TypoScript\ViewHelpers}
+{namespace ts=Neos\Fusion\ViewHelpers}
 [
 <f:for each="{listCollection}" as="item" iteration="iterator">
     <ts:render path="listItem" context="{node: item}" />
