--- a/Resources/Private/Templates/API/RssList.html
+++ b/Resources/Private/Templates/API/RssList.html
@@ -1,4 +1,4 @@
-{namespace ts=TYPO3\TypoScript\ViewHelpers}{namespace atom}<?xml version="1.0" encoding="utf-8"?>
+{namespace ts=Neos\Fusion\ViewHelpers}{namespace atom}<?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
   <channel>
     <atom:link href="http://www.duttweiler.de/api/news.rss" rel="self" type="application/rss+xml" />
