--- a/Resources/Private/Templates/NodeTypes/AbisZMenu.html
+++ b/Resources/Private/Templates/NodeTypes/AbisZMenu.html
@@ -1,5 +1,5 @@
 {namespace neos=Neos\Neos\ViewHelpers}
-{namespace ts=TYPO3\TypoScript\ViewHelpers}
+{namespace ts=Neos\Fusion\ViewHelpers}
 <nav{attributes -> f:format.raw()}>
 	<ul style="padding-left: 0;">
 		<f:render section="itemsList" arguments="{items: items}" />
