--- a/Resources/Private/Templates/NodeTypes/GenericLinkList.html
+++ b/Resources/Private/Templates/NodeTypes/GenericLinkList.html
@@ -1,4 +1,4 @@
-{namespace ts=TYPO3\TypoScript\ViewHelpers}
+{namespace ts=Neos\Fusion\ViewHelpers}
 <f:for each="{listCollection}" as="item" iteration="iterator">
 	<f:if condition="{limit} == 0">
 		<f:then>
