TASK: Replace `ts` with `fusion` in templates

--- a/Resources/Private/Templates/NodeTypes/GenericLinkList.html
+++ b/Resources/Private/Templates/NodeTypes/GenericLinkList.html
@@ -1,12 +1,12 @@
-{namespace ts=Neos\Fusion\ViewHelpers}
+{namespace fusion=Neos\Fusion\ViewHelpers}
 <f:for each="{listCollection}" as="item" iteration="iterator">
 	<f:if condition="{limit} == 0">
 		<f:then>
-			<ts:render path="listItem" context="{node: item}" />
+			<fusion:render path="listItem" context="{node: item}" />
 		</f:then>
 		<f:else>
 			<f:if condition="{iterator.cycle} <= {limit}">
-				<ts:render path="listItem" context="{node: item}" />
+				<fusion:render path="listItem" context="{node: item}" />
 			</f:if>
 		</f:else>
 	</f:if>
