--- a/Resources/Private/Templates/API/GenericList.html
+++ b/Resources/Private/Templates/API/GenericList.html
@@ -1,7 +1,7 @@
-{namespace ts=Neos\Fusion\ViewHelpers}
+{namespace fusion=Neos\Fusion\ViewHelpers}
 [
 <f:for each="{listCollection}" as="item" iteration="iterator">
-    <ts:render path="listItem" context="{node: item}" />
+    <fusion:render path="listItem" context="{node: item}" />
     <f:if condition="{iterator.isLast}"><f:else>,</f:else></f:if>
 </f:for>
 ]
