--- a/Resources/Private/Templates/API/RssList.html
+++ b/Resources/Private/Templates/API/RssList.html
@@ -1,4 +1,4 @@
-{namespace ts=Neos\Fusion\ViewHelpers}{namespace atom}<?xml version="1.0" encoding="utf-8"?>
+{namespace fusion=Neos\Fusion\ViewHelpers}{namespace atom}<?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
   <channel>
     <atom:link href="http://www.duttweiler.de/api/news.rss" rel="self" type="application/rss+xml" />
@@ -10,7 +10,7 @@
     <pubDate>Tue, 21 Jul 2015 09:30:00 +0200</pubDate>
 
 <f:for each="{listCollection}" as="item" iteration="iterator">
-    <ts:render path="listItem" context="{node: item}" />
+    <fusion:render path="listItem" context="{node: item}" />
 </f:for>
 
   </channel>
