--- a/Resources/Private/Templates/NodeTypes/FrontpageInfoBox.html
+++ b/Resources/Private/Templates/NodeTypes/FrontpageInfoBox.html
@@ -1,6 +1,6 @@
 {namespace neos=Neos\Neos\ViewHelpers}
-{namespace ts=Neos\Fusion\ViewHelpers}
+{namespace fusion=Neos\Fusion\ViewHelpers}
 <div class="RightColumnInfoBox">
 	<div class="InfoBoxHeading" {f:if(condition: '{bgColor}', then: 'style="background-color: {bgColor}"')}>{neos:contentElement.editable(property: 'title')}</div>
-	<div class="InfoBoxBody"><ts:render path="contentRenderer" context="{node: content}" /><div class="clearfix"></div></div>
+	<div class="InfoBoxBody"><fusion:render path="contentRenderer" context="{node: content}" /><div class="clearfix"></div></div>
 </div>
