TASK: Change neos claim in meta tag

--- a/Resources/Private/Templates/Page/Frontpage.html
+++ b/Resources/Private/Templates/Page/Frontpage.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Gerhard Syring-Lingenfelder" />
 		<meta name="keywords" content="Duttweiler,Neustadt,Weinstraße,Pfalz,Wein,Sport,Tischtennis,TT,VFL,Fußball,Vereine,Veranstaltungen,Schwimmbad,Syring,Syring-Lingenfelder" />
 		<meta name="description" content="Herzlich Willkommen in Duttweiler, einem Ortsteil von Neustadt an der Weinstraße in der Pfalz" />
-		<meta name="generator" content="neos - The next generation CMS - neos.io | powered by Jan Syring-Lingenfelder - www.jan-sl.de" />
+		<meta name="generator" content="neos - The open source Content Application Framework - www.neos.io | powered by Jan Syring-Lingenfelder - www.jan-sl.de" />
 		<meta name="google-play-app" content="app-id=de.jan_sl.duttweiler.app" />
 	</f:section>
 	<f:section name="stylesheets">
