FIX: remove dummy output

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -32,7 +32,7 @@
         <div id="Wrapper">
 	    <f:if condition="{headerBackgroundImage}">
 	    <f:then> <div id="PageHeading" style="background-image:url('{f:uri.resource(resource: headerBackgroundImage.resource)}');" > </f:then>
-	    <f:else> <div id="PageHeading" else> </f:else>
+	    <f:else> <div id="PageHeading"> </f:else>
 	    </f:if>
                 <nav id="RelatedPagesTopMenu">
                     <ul>
